# ShuttleCarControlAlgo

./: CMakeLists.txt
include/frc/: PIDController.h  ProfiledPIDController.h  TrapezoidProfile.h
src/: PIDController.cpp  TrapezoidProfile.cpp
test/: tester.cpp
